# stryke-duckdb

./: .gitignore  Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: aggregate_csv.stk  analytics.stk  crud.stk  discover.stk  parquet_to_db.stk  query_parquet.stk  window.stk
lib/: DuckDB.stk
src/: lib.rs  main.rs
t/: test_analytics.stk  test_duckdb.stk  test_introspection.stk  test_stryke_duckdb_surface.stk
tests/: contract_cli_round4.rs
