[package]
name = "stryke-duckdb"
version = "0.20.0"
edition = "2021"
description = "DuckDB cdylib for the stryke `duckdb` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-duckdb"
homepage = "https://menketechnologies.github.io/stryke-duckdb/"
publish = false

[lib]
name = "stryke_duckdb"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# `bundled` compiles libduckdb from source — single static cdylib, no
# system .so dep at runtime. Adds ~3-5 minutes to a cold build; cargo
# caches the artifact after that.
duckdb = { version = "1", features = ["bundled", "json", "parquet"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
